--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,4 +26,5 @@ jobs:
           pip install tox
 
       - name: Run tests with tox
-        run: tox -e py${{ matrix.python-version }}
+        run: tox -e py$(echo "${{ matrix.python-version }}" | tr -d .)
+
