--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10]
+        python-version: [3.9, 3.10, 3.11, 3.12, 3.13, 3.14]
     steps:
       - uses: actions/checkout@v3
 
@@ -26,5 +26,4 @@ jobs:
           pip install tox
 
       - name: Run tests with tox
-        run: tox -e py$(echo "${{ matrix.python-version }}" | tr -d .)
-
+        run: tox -e py${{ matrix.python-version }}
