--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = clean,py38,py39,py310,report
+envlist = clean,py39,py310,py311,py312,py313,py314,report
 skip_missing_interpreters = true
 
 [testenv]
