--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = clean,py39,py310,py311,py312,py313,py314,report
+envlist = clean,py39,py310,py311,py312,py313,linters,cover,report
 skip_missing_interpreters = true
 
 [testenv]
@@ -8,6 +8,20 @@ deps =
     pytest-cov
 commands =
     pytest --cov=otpgen --cov-append --cov-report=term-missing
+
+[testenv:linters]
+description = Run pylint checks
+skip_install = true
+deps = pylint
+commands = pylint otpgen.py test.py
+
+[testenv:cover]
+description = Run coverage report (term + HTML)
+deps = coverage
+skip_install = true
+commands =
+    coverage report --fail-under=90
+    coverage html
 
 [testenv:clean]
 deps = coverage
