--- a/.github/workflows/ci_run.yaml
+++ b/.github/workflows/ci_run.yaml
@@ -64,5 +64,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install tox
 
-      - name: Report coverage
+      - name: Generate coverage report
         run: tox -e report
