--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = clean,py39,py310,py311,py312,py313,linters,report
+envlist = clean,py311,py312,py313,py314,lint,report
 skip_missing_interpreters = true
 
 [testenv]
@@ -10,12 +10,11 @@ deps =
 commands =
     pytest --cov=otpgen --cov-append --cov-report=term-missing
 
-[testenv:linters]
-deps =
-    -rrequirements.txt
-    pylint
-commands =
-    pylint otpgen.py test_otpgen.py
+[testenv:lint]
+description = Run pylint on otpgen.py and test.py
+skip_install = true
+deps = pylint
+commands = pylint otpgen.py test.py
 
 [testenv:clean]
 deps = coverage
