--- a/.github/workflows/ci_run.yaml
+++ b/.github/workflows/ci_run.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11, 3.12, 3.13]
+        python-version: [3.11, 3.12, 3.13, 3.14]
 
     steps:
       - uses: actions/checkout@v3
@@ -26,27 +26,27 @@ jobs:
           python -m pip install --upgrade pip
           pip install tox
 
-      - name: Run tests
+      - name: Run tests and coverage
         run: |
-          TOXENV=py${{ matrix.python-version }} && TOXENV=${TOXENV/./} tox -e $TOXENV
+          TOXENV=py${{ matrix.python-version//./ }} tox -e $TOXENV
 
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: 3.11
 
       - name: Install tox
         run: |
           python -m pip install --upgrade pip
           pip install tox
 
-      - name: Run pylint
-        run: tox -e linters
+      - name: Run linter
+        run: tox -e lint
 
   coverage:
     runs-on: ubuntu-latest
@@ -54,15 +54,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: 3.11
 
       - name: Install tox
         run: |
           python -m pip install --upgrade pip
           pip install tox
 
-      - name: Generate coverage report
-        run: tox -e report
+      - name: Combine and report coverage
+        run: |
+          tox -e report
