--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skip_missing_interpreters = true
 
 [testenv]
 deps =
-    -rrequirements.txt
+    -rrequirements-linux.txt
     pytest
     pytest-cov
 commands =
