--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,14 @@
 [tox]
-envlist = clean,py311,py312,py313,py314,lint,report
+envlist = clean,py311,py312,py313,report,linters,cover
 skip_missing_interpreters = true
 
 [testenv]
 deps =
-    -rrequirements-linux.txt
+    -rrequirements.txt
     pytest
     pytest-cov
 commands =
     pytest --cov=otpgen --cov-append --cov-report=term-missing
-
-[testenv:lint]
-description = Run pylint on otpgen.py and test.py
-skip_install = true
-deps = pylint
-commands = pylint otpgen.py test.py
 
 [testenv:clean]
 deps = coverage
@@ -23,6 +17,20 @@ commands = coverage erase
 
 [testenv:report]
 deps = coverage
+skip_install = true
+commands =
+    coverage report --fail-under=90
+    coverage html
+
+[testenv:linters]
+deps =
+    pylint
+commands =
+    pylint otpgen.py test_otpgen.py
+
+[testenv:cover]
+deps =
+    coverage
 skip_install = true
 commands =
     coverage report --fail-under=90
