--- a/.github/workflows/ci_run.yaml
+++ b/.github/workflows/ci_run.yaml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.11, 3.12, 3.13, 3.14]
-
+        python-version: [3.11, 3.12, 3.13]
     steps:
       - uses: actions/checkout@v3
 
@@ -21,17 +20,16 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install tox
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install tox
 
-      - name: Run tests and coverage
+      - name: Run tests with tox
         run: |
-          TOXENV=py$(echo "${{ matrix.python-version }}" | tr -d .)
-          tox -e $TOXENV
+          TOXENV=py${{ matrix.python-version }} && TOXENV=${TOXENV/./} tox -e $TOXENV
 
-  lint:
+  linters:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -41,17 +39,16 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install tox
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install tox
 
-      - name: Run linter
-        run: tox -e lint
+      - name: Run linters
+        run: tox -e linters
 
   coverage:
     runs-on: ubuntu-latest
-    needs: test
     steps:
       - uses: actions/checkout@v3
 
@@ -60,10 +57,10 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install tox
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install tox
 
-      - name: Combine and report coverage
-        run: tox -e report
+      - name: Run coverage report
+        run: tox -e cover
