--- a/.github/workflows/ci_run.yaml
+++ b/.github/workflows/ci_run.yaml
@@ -14,6 +14,10 @@ jobs:
         python-version: [3.11, 3.12, 3.13]
     steps:
       - uses: actions/checkout@v3
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libzbar0 libzbar-dev
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
