--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = clean,py311,py312,py313,report,linters,cover
+envlist = py311, py312, py313, linters, coverage
 skip_missing_interpreters = true
 
 [testenv]
@@ -7,31 +7,18 @@ deps =
     -rrequirements-linux.txt
     pytest
     pytest-cov
-commands =
-    pytest --cov=otpgen --cov-append --cov-report=term-missing
-
-[testenv:clean]
-deps = coverage
-skip_install = true
-commands = coverage erase
-
-[testenv:report]
-deps = coverage
-skip_install = true
-commands =
-    coverage report --fail-under=90
-    coverage html
+commands = pytest --cov=otpgen --cov-report=term-missing
 
 [testenv:linters]
-deps =
-    pylint
-commands =
-    pylint otpgen.py test_otpgen.py
+deps = pylint
+commands = pylint otpgen.py test_otpgen.py
 
-[testenv:cover]
+[testenv:coverage]
 deps =
-    coverage
-skip_install = true
+    -rrequirements.txt
+    pytest
+    pytest-cov
 commands =
-    coverage report --fail-under=90
-    coverage html
+    pytest --cov=otpgen --cov-report=xml
+    coverage report
+    coverage xml
