--- a/.github/workflows/ci_run.yaml
+++ b/.github/workflows/ci_run.yaml
@@ -42,9 +42,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tox
-
-      - name: Run linters
-        run: tox -e linters
+          
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+            - name: Run linters
+              run: tox -e linters
 
   coverage:
     runs-on: ubuntu-latest
