--- a/.github/workflows/ci_run.yaml
+++ b/.github/workflows/ci_run.yaml
@@ -41,15 +41,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements-linux.txt
           pip install tox
           
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      
-            - name: Run linters
-              run: tox -e linters
+      - name: Run linters
+        run: tox -e linters
 
   coverage:
     runs-on: ubuntu-latest
@@ -64,6 +60,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements-linux.txt
           pip install tox
 
       - name: Run coverage
