Update requirements and CI workflow

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ skip_missing_interpreters = true
 
 [testenv]
 deps =
-    -rrequirements-linux.txt
+    -rrequirements.txt
     pytest
     pytest-cov
 commands = pytest --cov=otpgen --cov-report=term-missing
