--- a/.github/workflows/ci_run.yaml
+++ b/.github/workflows/ci_run.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: CI for otpgen
 
 on:
   push:
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.11, 3.12, 3.13]
+
     steps:
       - uses: actions/checkout@v3
 
@@ -20,49 +21,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox
+      - name: Install test dependencies
+        run: pip install -r requirements-test.txt
 
       - name: Run tests
         run: tox -e py
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+      - name: Lint
+        run: tox -e lint
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-linux.txt
-          pip install tox
-          
-      - name: Run linters
-        run: tox -e linters
-
-  coverage:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-linux.txt
-          pip install tox
-
-      - name: Run coverage
+      - name: Coverage
         run: tox -e coverage
-
